# mauth-client-rust

./: .fossa.yml  .travis.yml  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/: axum_service.rs  config.rs  config_test.rs  lib.rs  protocol_test_suite.rs  reqwest_middleware.rs  sign_outgoing.rs  tower.rs  validate_incoming.rs
