[package]
name = "mauth-client"
version = "0.1.0"
authors = ["Mason Gup <mgup@mdsol.com>"]
edition = "2018"
license-file = "LICENSE.txt"
description = "Sign requests and validate responses using the Medidata MAuth protocol"
readme = "README.md"
homepage = "https://github.com/mdsol/mauth-client-rust"
repository = "https://github.com/mdsol/mauth-client-rust"
keywords = ["security", "authentication", "web"]
categories = ["authentication", "web-programming"]

[dependencies]
ring = ">= 0.16.19"
hyper = { version = ">= 0.14.2", features = ["client", "http1"] }
hyper-tls = ">= 0.5.0"
serde = { version = ">= 1.0.85", features = ["derive"] }
serde_json = ">= 1.0.0"
serde_yaml = ">= 0.8.0"
uuid = { version = ">= 0.8.0", features = ["v4"] }
dirs = ">= 2.0.0"
base64 = ">= 0.10.0"
chrono = ">= 0.4.0"
percent-encoding = ">= 2.0.0"
tokio = { version = ">= 1.0.1", features = ["fs"] }
sha2 = ">= 0.9.0"
hex = ">= 0.4.0"
openssl = ">= 0.10.0"
regex = { version = "1", default_features = false, features = ["std"] }
bytes = "*" #No version needed as many other crates depend on it as well
http = "*"

[dev-dependencies]
tokio = { version = ">= 1.0.1", features = ["rt-multi-thread", "macros"] }
