[package]
name = "mauth-client"
version = "0.4.0"
authors = ["Mason Gup <mgup@mdsol.com>"]
edition = "2021"
documentation = "https://docs.rs/mauth-client/"
license = "MIT"
description = "Sign requests and validate responses using the Medidata MAuth protocol"
readme = "README.md"
homepage = "https://github.com/mdsol/mauth-client-rust"
repository = "https://github.com/mdsol/mauth-client-rust"
keywords = ["security", "authentication", "web"]
categories = ["authentication", "web-programming"]

[dependencies]
reqwest = { version = ">= 0.11.23", features = ["json"] }
url = ">= 2.5.0"
serde = { version = ">= 1.0.85", features = ["derive"] }
serde_json = ">= 1.0.0"
serde_yaml = ">= 0.8.0"
uuid = { version = ">= 0.21.0", features = ["v4"] }
dirs = ">= 2.0.0"
chrono = ">= 0.4.0"
tokio = { version = ">= 1.0.1", features = ["fs"] }
hex = ">= 0.4.0"
bytes = ">= 1.0.0"
http = ">= 1.0.0"
tower = { version = ">= 0.4.13", optional = true }
axum = { version = ">= 0.7.2", optional = true }
futures-core = { version = ">= 0.3.25", optional = true }
base64 = { version = ">= 0.10.0", optional = true }
thiserror = ">= 1.0.37"

[dependencies.mauth-core]
git = "https://github.com/mdsol/mauth-core"
branch = "main"
version = "0.5"

[dev-dependencies]
tokio = { version = ">= 1.0.1", features = ["rt-multi-thread", "macros"] }

[features]
axum-service = ["tower", "futures-core", "axum", "base64"]
