[package]
name = "mauth-client"
version = "0.5.0"
authors = ["Mason Gup <mgup@mdsol.com>"]
edition = "2021"
documentation = "https://docs.rs/mauth-client/"
license = "MIT"
description = "Sign requests and validate responses using the Medidata MAuth protocol"
readme = "README.md"
homepage = "https://github.com/mdsol/mauth-client-rust"
repository = "https://github.com/mdsol/mauth-client-rust"
keywords = ["security", "authentication", "web"]
categories = ["authentication", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-tracing = { version = "0.5.4", optional = true }
async-trait = "0.1.83"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.10"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = "0.4"
tokio = { version = "1", features = ["fs"] }
tower = { version = "0.4", optional = true }
axum = { version = ">= 0.7.2", optional = true }
futures-core = { version = "0.3", optional = true }
http = { version = "1", optional = true }
bytes = { version = "1", optional = true }
thiserror = "1"
mauth-core = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
axum-service = ["tower", "futures-core", "axum", "http", "bytes"]
tracing-otel-26 = ["reqwest-tracing/opentelemetry_0_26"]
tracing-otel-27 = ["reqwest-tracing/opentelemetry_0_27"]
